# ocr-llm

./: .env.example  .gitignore  CLAUDE.md  README.md  gemini_batch_ocr.py  got_ocr_2_0.py  pyproject.toml  result_gemini.md  result_ocr.md
